--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -53,6 +53,7 @@ install(PROGRAMS
   ${PROJECT_NAME}/nav2_cancel_all_goals.py
   ${PROJECT_NAME}/nav2_get_tf.py
   ${PROJECT_NAME}/nav2_send_navigate_to_pose.py
+  ${PROJECT_NAME}/nav2_send_dock_robot.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
