--- a/free_fleet_examples/config/zenoh/nav2_tb3_zenoh_bridge_ros2dds_client_config.json5
+++ b/free_fleet_examples/config/zenoh/nav2_tb3_zenoh_bridge_ros2dds_client_config.json5
@@ -7,10 +7,10 @@
         subscribers: [],
         service_servers: [],
         service_clients: [],
-        action_servers: [".*/navigate_to_pose"],
+        action_servers: [".*/navigate_to_pose", ".*/dock_robot"],
         action_clients: [],
       },
-      pub_max_frequencies: [".*/navigate_to_pose/*=1", ".*/battery_state=1"],
+      pub_max_frequencies: [".*/navigate_to_pose/*=1", ".*/battery_state=1", ".*/dock_robot/*=1"],
     },
   },
   // Zenoh related configurations
