Parameterize timeout, otherwise None
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
@@ -39,6 +39,7 @@ rmf_fleet:
       navigation_stack: 2
       init_timeout_sec: 5
       initial_map: "L1"
+      service_call_timeout_sec: 1.0
       map_frame: "map"
       robot_frame: "base_footprint"
       maps:
